[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "server/main.rs"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
